# cbounds

./: .gitignore  CMakeLists.txt  README.md
src/: BuildDataflowAction.cpp  CMakeLists.txt  VisualizeCFGAction.cpp  actions.cpp  plugin.cpp
src/include/: AbstractAction.h  BuildDataflowAction.h  VisualizeCFGAction.h  actions.h
test/: .gdbinit  clang-dbg  readme.txt
test/samples/: cfg.c  inner_pointer.ast  inner_pointer.c  nul_terminated.ast  nul_terminated.c  unchecked_read.ast  unchecked_read.c
